# nfx-stringutils

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml  codeql.yml  documentation.yml  release.yml
benchmark/: BM_Splitter.cpp  BM_StringUtilities.cpp  CMakeLists.txt  README.md
cmake/: nfx-stringutils-config.cmake.in  nfxStringUtilsBuildConfig.cmake  nfxStringUtilsDependencies.cmake  nfxStringUtilsInstall.cmake  nfxStringUtilsPackaging.cmake  nfxStringUtilsSources.cmake
doc/: CMakeLists.txt
include/nfx/detail/string/: Splitter.inl  Utils.inl
include/nfx/string/: Splitter.h  Utils.h
samples/: CMakeLists.txt  Sample_Network.cpp  Sample_StringSplitter.cpp  Sample_StringUtils.cpp
test/: CMakeLists.txt  TESTS_StringSplitter.cpp  TESTS_StringUtils.cpp
